tests/paczka1/fuzzy1/67175111.err
Error in line 1: LLqFz5 A302 7,3
Error in line 7: qqPBfiyri7Q A302 87,0
Error in line 5: 24WOHEqo A302 66,2
Error in line 8: XIkWTewe S658 94,4
Error in line 25: XIkWTewe A302 44,7
Error in line 22: LLqFz5 S712 9,1
Error in line 32: LLqFz5 A302 92,4
Error in line 34: jdFn79nv5qP S712 37,8
Error in line 29: qqPBfiyri7Q S258 8,4
